client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      volumes:
        - name: config
          configMap:
            name: client-cm
            items:
              - key: "config.json"
                path: "config.json"
      containers:
        - name: client
          image: slokesh/yoga-client:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: "/config.json"
              readOnly: true

---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
